Interviewbit backtracking timeout: NumbersOfLengthNAndValueLessThanK with static class RunningSum